# poag

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml  result
agent-primers/: mvp-specification.md  project_structure.md  system_prompt_draft.md
agent-primers/langgraph/: basics.md  beads.md  guidance.md  memory.md  observability.md  tools.md
hello-py/: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml  result
hello-py/.poag/: index.json
hello-py/.poag/contracts/inputs/: hello-rs.md
hello-py/src/: lib.rs
hello-py/src/python/hello_py/: __init__.py
hello-py/tests/: test_hello.py
hello-rs/: flake.nix
hello-rs/.poag/: index.json
hello-rs/.poag/contracts/outputs/: hello-py.md  hello-wasm.md
hello-wasm/: flake.nix
hello-wasm/.poag/: index.json
hello-wasm/.poag/contracts/inputs/: hello-rs.md
hello-wasm/.poag/contracts/outputs/: hello-web.md
hello-web/: flake.nix  package-lock.json  package.json  result
hello-web/.poag/: index.json
hello-web/.poag/contracts/inputs/: hello-wasm.md
hello-web/src/: index.html
poag/: .gitignore  AGENT_PATTERN_REQUIREMENTS.md  CHECKPOINT_REFACTORING.md  README.md  flake.nix  pyproject.toml
poag/src/poag_sf/: __init__.py  agents.py  checkpoints.py  config.py  contracts.py  exploration_graph.py  graph.py  graph_builder.py  logging.py  main.py  metadata.py  tools.py
src/: lib.rs
src/hello_fancy/: __init__.py  cli.py
subflake-git/hello-py/refs/heads/: main
subflake-git/hello-rs/refs/heads/: main
subflake-git/hello-wasm/refs/heads/: main
subflake-git/hello-web/refs/heads/: main
tests/: __init__.py  docker-compose.yml  test_hello_py.py  test_hello_rs.py  test_hello_wasm.py  test_hello_web.py
