[project]
name = "hello-fancy"
version = "0.1.0"
description = "A fancy CLI app that greets users"
readme = "README.md"
authors = [
    { name = "Matt Rixman", email = "MatrixManAtYrService@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "hello-py>=0.1.0",
]
keywords = ["cli", "greeting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
hello-fancy = "hello_fancy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hello-py source for uv to lock against
# At build time, Nix will override this with the wheel from the subflake
[tool.uv.sources]
hello-py = { path = "./hello-py", editable = true }

[tool.pytest.ini_options]
# Only collect tests from the root-level tests/ directory
# Subflake tests (hello-py/tests/, etc.) are run via Nix checks
testpaths = ["tests"]
# Explicitly ignore subflake directories to avoid double-testing
norecursedirs = [
    "hello-rs",
    "hello-py",
    "hello-wasm",
    "hello-web",
    ".*",
    "build",
    "dist",
    "*.egg"
]
