[project]
name = "hello_py"
version = "0.1.0"
description = "Python library with FFI bindings to hello-rs"
readme = "README.md"
authors = [
    { name = "Matt Rixman", email = "MatrixManAtYrService@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ffi", "rust", "greeting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[tool.maturin]
python-source = "src/python"
strip = true
bindings = "pyo3"
module-name = "hello_py._rust"
# Always build release builds
profile = "release"
