[project]
name = "poag"
version = "0.1.0"
description = "Product Owner Agent Graph for Subflakes - LangGraph orchestration for development planning"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.64",
    "langgraph-checkpoint-sqlite>=2.0.4",  # For persistent checkpointing
    "langchain-anthropic>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",  # For Serena MCP integration
    "typer>=0.9.0",
    "rich>=13.0.0",  # For nice CLI output to stderr
    "structlog>=24.0.0",  # Structured logging
    "xdg-base-dirs>=6.0.0",  # XDG directory support
    "pydantic>=2.0.0",  # For config validation
    "networkx>=3.0",  # For dependency graph analysis
]

[project.scripts]
poag = "poag_sf.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
